# Robot_Programming

./: .gitignore  README.md  git_commands.txt
C++BashTest/: Makefile  README.txt  bash.cpp  lib.cpp  lib.hpp  other_lib.cpp  other_lib.hpp
Esercitazione1/: readme.txt
Esercitazione1/minicore/: CMakeLists.txt
Esercitazione1/minicore/executables/: CMakeLists.txt  Makefile  cmake_install.cmake
Esercitazione1/minicore/src/: CMakeLists.txt
Esercitazione1/minicore/src/messages/: CMakeLists.txt
Esercitazione1/minicore/src/utils/: CMakeLists.txt
Esercitazione2/: CMakeLists.txt
Esercitazione2/src/linalg/: test.cpp  vec_f.cpp
