add_library(utils SHARED
	blob.cpp
	object_data.cpp
	deserializer.cpp
	property_container.cpp
	serializable.cpp
 	property_container_manager.cpp
 	id_context.cpp
 	serialization_context.cpp
    property.cpp
    identifiable.cpp
    property_eigen.cpp
    serializer.cpp
    id_placeholder.cpp
    property_identifiable.cpp
)